TestEclipse/src/objects/Media_Inventory__c.object
<CustomObject>
    <description>Includes available audio and video media in inventory.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short description about media.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>It is a type of media.</description>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audio</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Audio/Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>It is cost of individual media available in inventory.</description>
        <label>Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>it is available media stock in inventory.</description>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year of publication of media.</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>